--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/react": "^3.0.9",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/onest": "^5.0.2",
+    "@preact/signals-react": "^2.0.0",
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
     "astro": "^4.2.6",
